--- a/transformer_results_plotting.ipynb
+++ b/transformer_results_plotting.ipynb
@@ -96,7 +96,7 @@
    "outputs": [],
    "source": [
     "def load_file(fn):\n",
-    "    with open('saved2/{}'.format(fn),'rb') as f:\n",
+    "    with open('{}'.format(fn),'rb') as f:\n",
     "        return pickle.load(f)"
    ]
   },
